--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blog</title>
+	<title>Riley Parsons - Designer and Developer</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+	<script src="https://use.fontawesome.com/5210d1034d.js"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<header id="main_navigation" class="bottom_border">
+		<a href="#" class="no_highlight"><%= image_tag "PersonalLogo.png", :id => "main_logo"%></a>
+		<nav>
+			<a href="index.html">Resume</a>
+			<%= link_to("Articles", posts_path) %>
+			<a href="contact.html">Contact</a>
+		</nav>
+	</header>
 
 <%= yield %>
 
