Added redcarpet and pygments for syntax and highlighting

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
 		<hr>
 	</header>
 	<div class="content">
-		<%= @post.content %>
+		<%= markdown @post.content %>
 	</div>
 	<hr>
 	<div id="share_box">
@@ -15,3 +15,5 @@
 	</div>
 	<hr>
 </div>
+
+<%= link_to("Edit", edit_post_path(@post)) %>
