--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,18 @@
-<h1>Hello World!</h1>
+<div class="bottom_border">
+	<div id="page_title">
+		<h3>Some things I've written.</h3>
+	</div>
+</div>
+
+<div id="posts_wrapper" class="wrapper">
+
+	<% @posts.each do |post| %>
+		<div class="post">
+			<p class="date"><%= post.created_at.strftime('%A, %B, %d') %></p>
+			<h2><%= link_to post.title, post %></h2>
+			<hr>
+		</div>
+	<% end %>
+</div>
+
+<%= will_paginate @posts %>
