edit and new style update

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Edit Post</h1>
+<div class="bottom_border">
+  <div id="page_title">
+    <h2>New Post</h2>
+  </div>
+</div>
 
-<%= render "form" %>
+<div class="wrapper wrapper_padding">
+	<%= render "form" %>
+</div>
