Add conditional sign in sign out alerts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,14 @@
 		<%= markdown @post.content %>
 	</div>
 	<hr>
+
+	<% if user_signed_in? %>
+		<div id="admin_links">
+			<%= link_to("Edit Article", edit_post_path(@post)) %>
+			<%= link_to("Delete Article", post_path(@post) , method: :delete, data: {confirm: "Are you sure?"}) %>
+		</div>
+	<% end %>
+
 	<div id="share_box">
 		<p>Share Some Article Title</p>
 		<!-- Twitter -->
@@ -16,7 +24,3 @@
 	<hr>
 	<%= render "disqus" %>
 </div>
-
-
-
-<%= link_to("Edit", edit_post_path(@post)) %>
