--- a/app/assets/stylesheets/_posts.css.scss
+++ b/app/assets/stylesheets/_posts.css.scss
@@ -70,6 +70,22 @@
 	}
 }
 
+#admin_links {
+	border-top: 1px solid $light;
+	border-bottom: 1px solid $light;
+	text-align: center;
+	padding: 1em 0;
+	margin: 3em 0;
+	a {
+		color: $light;
+		margin: 0 1em;
+		font-weight: 700;
+		font-size: .8em;
+		text-decoration: none;
+	}
+
+}
+
 // - - - - - - - - Pagination 
 
 .pagination:before,
