--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,10 @@
 		<nav>
 			<%= link_to("Resume", root_path) %>
 			<%= link_to("Articles", posts_path) %>
-			<a href="contact.html">Contact</a>
+			<%= link_to("Articles", new_contact_path) %>
+			<% if user_signed_in? %>
+				<%= link_to("Sign Out", destroy_user_session_path , method: :delete) %>
+			<% end %>
 		</nav>
 	</header>
 
