--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 		<nav>
 			<%= link_to("Resume", root_path) %>
 			<%= link_to("Articles", posts_path) %>
-			<%= link_to("Articles", new_contact_path) %>
+			<%= link_to("Contact", new_contact_path) %>
 			<% if user_signed_in? %>
 				<%= link_to("Sign Out", destroy_user_session_path , method: :delete) %>
 			<% end %>
