--- a/app/views/welcome/_timeline.html.erb
+++ b/app/views/welcome/_timeline.html.erb
@@ -1,22 +1,26 @@
 <div class="timeline">
 	<section class="current">
 		<span class="title">
-			<h4>Currently</h4>
+			<p>Currently</p>
 		</span>
 		<ul class="content">
 			<li>
 				<p class="object">Walking through Harvard’s Data Science <a href="#">course</a>.</p>
-				<p class="description">Python, statistical modelling, machine learning</p>
+				<p class="description">Python / statistical modelling / machine learning</p>
+			</li>
+			<li>
+				<p class="object">Developed <a href="#">Cheers</a>, a simple iOS application written in Swift</p>
+				<p class="description">Swift</p>
 			</li>
 			<li>
 				<p class="object">Building my personal <a href="#">website</a>.</p>
-				<p class="description">Photoshop, Illustrator, Ruby on Rails, Git</p>
+				<p class="description">Photoshop / Illustrator, Ruby on Rails / Git / Heroku</p>
 			</li>
 		</ul>
 	</section>
 	<section class="recently">
 		<span class="title">
-			<h4>Recently</h4>
+			<p>Recently</p>
 		</span>
 		<ul class="content">
 			<li>
@@ -24,23 +28,27 @@
 			</li>
 			<li>
 				<p class="object">Interned at <a href="#">SV Angel</a> in San Francisco.</p>
-				<p class="description">Due dilligence, pitch decks, early stage investments.</p>
+				<p class="description">Due dilligence / pitch decks / early stage investments</p>
 			</li>
 		</ul>
 	</section>
 	<section class="past">
 		<span class="title">
-			<h4>Past</h4>
+			<p>Past</p>
 		</span>
 		<ul class="content">
 			<li>
 				<p class="object">Graduated from <a href="#">Santa Clara University</a></p>
-				<p class="description">Bioengineering, entrepreneurship, chemistry</p>
+				<p class="description">Bioengineering / entrepreneurship / chemistry</p>
 			</li>
 			<li>
 				<p class="object"><a href="#">Spree: Mobile Marketplace for Students</a></p>
-				<p class="description">Objective-C, Sketch</p>
+				<p class="description">Objective-C / Sketch</p>
 			</li>
 		</ul>
 	</section>
+	<hr>
+	<div id="download_CV_box">
+		<a href="https://drive.google.com/file/d/0B0KVOiv1pO_vWk9UdzdGX2VMaDA/view?usp=sharing" target="_blank">Download CV</a>
+	</div>
 </div>
