--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,6 @@
 		<h2>Riley Parsons is a recent graduate of <a href="#">Santa Clara University</a>. He is currently looking for work at venture capital firms and digital health startups.</h2>
 	</div>
 </div>
-<div class="wrapper">
+<div class="wrapper wrapper">
 	<%= render "timeline" %>
 </div>
