--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -102,12 +102,41 @@ a {
 			// animation: left_shift 1.5s 0s ease;
 		}
 	}
+	
 	nav {
-		margin-top: 2rem;
-		a {
-			margin: 0 1rem;
-			font-size: 1rem;
+		width:50%;
+		margin: 2rem auto 0 auto;
+		ul {
+			padding: 0px;
+			li {
+				display: inline;
+				text-align: center;
+			}
 		}
+		a {
+			display: inline-block;
+			width: 32%;
+			margin: 0;
+			font-size: 1rem;
+			padding: .75rem 0;
+		}
+		hr {
+			height: .25rem;
+			width: 33%;
+			margin: 0;
+			background: $highlight;
+			border: none;
+			transition: .3s ease-in-out;
+		}
+
+		.two:hover ~ hr {
+			margin-left: 33%;
+		}
+
+		.three:hover ~ hr {
+			margin-left: 66%;
+		}
+
 	}
 }
 
