--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,17 @@
 </head>
 <body>
 	<header id="main_navigation" class="bottom_border">
-		<%= link_to(image_tag("PersonalLogo.png", :id => "main_logo"), root_path, :class => "no_highlight")%>
+		<%= inline_svg("PersonalLogo.svg") %>
 		<nav>
-			<%= link_to("Resume", root_path) %>
-			<%= link_to("Articles", posts_path) %>
-			<%= link_to("Contact", new_contact_path) %>
-			<% if user_signed_in? %>
-				<%= link_to("Sign Out", destroy_user_session_path , method: :delete) %>
-			<% end %>
+			<ul>
+				<li class="one"><%= link_to("Resume", root_path)%></li>
+				<li class="two"><%= link_to("Articles", posts_path)%></li>
+				<li class="three"><%= link_to("Contact", new_contact_path)%></li>
+				<% if user_signed_in? %>
+					<li><%= link_to("Sign Out", destroy_user_session_path , method: :delete) %></li>
+				<% end %>
+				<hr>
+			</ul>
 		</nav>
 	</header>
 
