--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header id="main_navigation" class="bottom_border">
-		<%= link_to(image_tag("PersonalLogo.png", :id => "main_logo"), root_path, :class => "no_highlight")%>
+		<%= inline_svg("PersonalLogo.svg") %>
 		<nav>
 			<%= link_to("Resume", root_path) %>
 			<%= link_to("Articles", posts_path) %>
