--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,40 +68,6 @@ a {
 	padding: 2.5em 5%;
 	text-align: center;
 
-	#main_logo:hover{
-		// Animations
-		@keyframes right_shift {
-			0%, 20%, 40%, 60%, 100% {
-		   		transform: translateX(0);
-		   	}
-    		30% {
-    			transform: translateX(30px);
-    		}
-    		50% {
-    			transform: translateX(10px);
-    		}
-		}
-
-		@keyframes left_shift {
-		  0%, 20%, 40%, 60%, 100% {
-		   		transform: translateX(0);
-		   	}
-    		30% {
-    			transform: translateX(-30px);
-    		}
-    		50% {
-    			transform: translateX(-10px);
-    		}
-		}
-
-		.yellow_tri {
-			animation: right_shift 1.5s 0s ease;
-		}
-
-		.black_tri {
-			// animation: left_shift 1.5s 0s ease;
-		}
-	}
 	nav {
 		margin-top: 2rem;
 		a {
@@ -174,6 +140,43 @@ input[type="submit"], .button {
 		color: $highlight;
 	}
 }
+
+
+// Animations
+
+@keyframes right_shift {
+	0%, 20%, 40%, 60%, 100% {
+   		transform: translateX(0);
+   	}
+	30% {
+		transform: translateX(30px);
+	}
+	50% {
+		transform: translateX(10px);
+	}
+}
+
+@keyframes left_shift {
+  0%, 20%, 40%, 60%, 100% {
+   		transform: translateX(0);
+   	}
+	30% {
+		transform: translateX(-30px);
+	}
+	50% {
+		transform: translateX(-10px);
+	}
+}
+
+.animate_right_shift {
+	animation: right_shift 1.5s 0s ease;
+}
+
+.animate_left_shift {
+	animation: left_shift 1.5s 0s ease;
+}
+
+
 
 @import "home";
 @import "posts";
