--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header id="main_navigation" class="bottom_border">
-		<%= inline_svg("PersonalLogo.svg") %>
+		<a href="<%=root_path%>"><%= inline_svg("PersonalLogo.svg") %></a>
 		<nav>
 			<%= link_to("Resume", root_path) %>
 			<%= link_to("Articles", posts_path) %>
