--- a/app/views/welcome/_timeline.html.erb
+++ b/app/views/welcome/_timeline.html.erb
@@ -5,16 +5,16 @@
 		</span>
 		<ul class="content">
 			<li>
-				<p class="object">Walking through Harvard’s Data Science <a href="#">course</a>.</p>
+				<p class="object">Walking through Harvard’s Data Science <a href="http://cs109.github.io/2015/">course</a>.</p>
 				<p class="description">Python / statistical modelling / machine learning</p>
 			</li>
 			<li>
-				<p class="object">Developed <a href="#">Cheers</a>, a simple iOS application written in Swift</p>
+				<p class="object"><a href="#">Cheers</a>: a simple iOS application written in Swift</p>
 				<p class="description">Swift</p>
 			</li>
 			<li>
 				<p class="object">Building my personal <a href="#">website</a>.</p>
-				<p class="description">Photoshop / Illustrator, Ruby on Rails / Git / Heroku</p>
+				<p class="description">Photoshop / Illustrator / Ruby on Rails / Git / Heroku</p>
 			</li>
 		</ul>
 	</section>
@@ -27,7 +27,7 @@
 				<p class="object">Travelled throughout Eastern Europe and Southeast Asia.</p>
 			</li>
 			<li>
-				<p class="object">Interned at <a href="#">SV Angel</a> in San Francisco.</p>
+				<p class="object">Associate Intern at <a href="https://svangel.com/">SV Angel</a> in San Francisco</p>
 				<p class="description">Due dilligence / pitch decks / early stage investments</p>
 			</li>
 		</ul>
@@ -38,12 +38,20 @@
 		</span>
 		<ul class="content">
 			<li>
-				<p class="object">Graduated from <a href="#">Santa Clara University</a></p>
+				<p class="object">Graduated from <a href="https://www.scu.edu/">Santa Clara University</a></p>
 				<p class="description">Bioengineering / entrepreneurship / chemistry</p>
 			</li>
 			<li>
-				<p class="object"><a href="#">Spree: Mobile Marketplace for Students</a></p>
+				<p class="object">Technology and Venture Capital Intern at <a href="https://www.cnb.com/technology/">City National Bank</a></p>
+				<p class="description">Venture debt / startups / banking</p>
+			</li>
+			<li>
+				<p class="object"><a href="#">Spree</a>: mobile marketplace for students</p>
 				<p class="description">Objective-C / Sketch</p>
+			</li>
+			<li>
+				<p class="object"><a href="#">SceneScope</a>: map app for Santa Clara students</p>
+				<p class="description">Objective-C</p>
 			</li>
 		</ul>
 	</section>
