--- a/app/views/welcome/_timeline.html.erb
+++ b/app/views/welcome/_timeline.html.erb
@@ -6,7 +6,7 @@
 		<ul class="content">
 			<li>
 				<p class="object">Walking through Harvard’s Data Science <a href="http://cs109.github.io/2015/">course</a>.</p>
-				<p class="description">Python / statistical modelling / machine learning</p>
+				<p class="description">Python / statistical modeling / machine learning</p>
 			</li>
 			<li>
 				<p class="object"><a href="#">Cheers</a>: a simple iOS application written in Swift</p>
@@ -42,16 +42,20 @@
 				<p class="description">Bioengineering / entrepreneurship / chemistry</p>
 			</li>
 			<li>
+				<p class="object">Completed <a href="http://scholarcommons.scu.edu/cgi/viewcontent.cgi?article=1037&context=bioe_senior">senior thesis</a> required for degree in bioengineering</p>
+				<p class="description">Bioengineering / Analytical Chemistry</p>
+			</li>
+			<li>
 				<p class="object">Technology and Venture Capital Intern at <a href="https://www.cnb.com/technology/">City National Bank</a></p>
-				<p class="description">Venture debt / startups / banking</p>
+				<p class="description">Venture debt / startups / banking / business writing</p>
 			</li>
 			<li>
-				<p class="object"><a href="#">Spree</a>: mobile marketplace for students</p>
-				<p class="description">Objective-C / Sketch</p>
+				<p class="object"><a href="#">Developed Spree</a>: mobile marketplace for students</p>
+				<p class="description">Objective-C / Sketch / XCode</p>
 			</li>
 			<li>
-				<p class="object"><a href="#">SceneScope</a>: map app for Santa Clara students</p>
-				<p class="description">Objective-C</p>
+				<p class="object"><a href="#">Developed SceneScope</a>: map app for Santa Clara students</p>
+				<p class="description">Objective-C / XCode</p>
 			</li>
 		</ul>
 	</section>
