--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,7 @@
 	<% end %>
 
 	<div id="share_box">
-		<p>Share Some Article Title</p>
+		<p>Share <%= @post.title %></p>
 		<!-- Twitter -->
 		<a onclick="javascript:window.open('http://twitter.com/share?text=<%= @post.title %> by @rileysparsons - &amp;url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);"><i class="fa fa-twitter"></i></a>
 	</div>
