--- a/app/views/welcome/_timeline.html.erb
+++ b/app/views/welcome/_timeline.html.erb
@@ -5,15 +5,15 @@
 		</span>
 		<ul class="content">
 			<li>
-				<p class="object">Walking through Harvard’s Data Science <a href="http://cs109.github.io/2015/">course</a>.</p>
+				<p class="object">Walking through Harvard’s Data Science <a href="http://cs109.github.io/2015/">course</a></p>
 				<p class="description">Python / statistical modeling / machine learning</p>
 			</li>
 			<li>
-				<p class="object"><a href="#">Cheers</a>: a simple iOS application written in Swift</p>
+				<p class="object">Built <a href="https://github.com/rileysparsons/Cheers">Cheers</a>, a simple iOS application written in Swift</p>
 				<p class="description">Swift</p>
 			</li>
 			<li>
-				<p class="object">Building my personal <a href="#">website</a>.</p>
+				<p class="object">Building my personal <a href="https://github.com/rileysparsons/rileyparsons.com">website</a></p>
 				<p class="description">Photoshop / Illustrator / Ruby on Rails / Git / Heroku</p>
 			</li>
 		</ul>
@@ -24,7 +24,7 @@
 		</span>
 		<ul class="content">
 			<li>
-				<p class="object">Travelled throughout Eastern Europe and Southeast Asia.</p>
+				<p class="object">Travelled throughout Eastern Europe and Southeast Asia</p>
 			</li>
 			<li>
 				<p class="object">Associate Intern at <a href="https://svangel.com/">SV Angel</a> in San Francisco</p>
@@ -50,11 +50,19 @@
 				<p class="description">Venture debt / startups / banking / business writing</p>
 			</li>
 			<li>
-				<p class="object"><a href="#">Developed Spree</a>: mobile marketplace for students</p>
+				<p class="object">Marketing intern at <a href="http://www.se3d.com/">SE3D Education</a></p>
+				<p class="description">Copywriting / InDesign / 3D Bioprinting</p>
+			</li>
+			<li>
+				<p class="object">Developed <a href="https://github.com/rileysparsons/Spree">Spree</a>, mobile marketplace for students</p>
 				<p class="description">Objective-C / Sketch / XCode</p>
 			</li>
 			<li>
-				<p class="object"><a href="#">Developed SceneScope</a>: map app for Santa Clara students</p>
+				<p class="object">Research Assistant in <a href="https://www.scu.edu/cas/chemistry/faculty/steven-suljak/">Suljak Lab</a>, Santa Clara University, Department of Chemistry</p>
+				<p class="description">Capillary Electrophoresis / Analytical Chemistry / Protein-DNA Interactions </p>
+			</li>
+			<li>
+				<p class="object">Developed SceneScope, map app for Santa Clara students</p>
 				<p class="description">Objective-C / XCode</p>
 			</li>
 		</ul>
