--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="bottom_border">
 	<div id="intro_statement">
-		<h2>Riley Parsons is a recent graduate of <a href="#">Santa Clara University</a>.<br>He is currently looking for work at venture capital firms and digital health startups.</h2>
+		<h2>Riley Parsons is a recent graduate of <a href="#">Santa Clara University</a>.<br>He is currently looking for work at digital health startups and venture capital funds.</h2>
 	</div>
 </div>
 <div class="wrapper wrapper">
