--- a/app/assets/stylesheets/_home.css.scss
+++ b/app/assets/stylesheets/_home.css.scss
@@ -30,16 +30,18 @@ $highlight: #ffc963;
 		margin: 0;
 	}
 
-	p.object {
-		margin-bottom: 0px;
+	div.description {
+		p {
+			margin-bottom: 0px;
+		}
 	}
 
-	p.description{
+	p.skills{
 		text-transform: uppercase;
 		margin-top: 0px;
 		font-weight: 300;
 		font-size: .8em;
-
+		margin-bottom: 0;
 	}
 
 	>section{
@@ -58,6 +60,16 @@ $highlight: #ffc963;
 			width: auto;
 		}
 	}
+
+	#admin_section {
+		a {
+			background-color: transparent;
+			font-weight: 700;
+			font-size: .8em;
+			text-decoration: none;
+		}
+	}
+
 }
 
 hr {
