--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 	<header id="main_navigation" class="bottom_border">
 		<a href="<%=root_path%>"><%= inline_svg("PersonalLogo.svg") %></a>
 		<nav>
-			<%= link_to("Resume", root_path) %>
+			<%= link_to("Résumé", root_path) %>
 			<%= link_to("Articles", posts_path) %>
 			<%= link_to("Contact", new_contact_path) %>
 			<% if user_signed_in? %>
