--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -20,6 +20,12 @@
 <br>
 <br>
 
+<%= f.label :startDate, "List start date" %><br>
+<%= f.date_field :startDate%>
+
+<br>
+<br>
+
 <%= f.submit %>
 
 <% end %>
