--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -20,8 +20,8 @@
 <br>
 <br>
 
-<%= f.label :startDate, "List start date" %><br>
-<%= f.date_field :startDate%>
+<%= f.label :start_date, "List start date" %><br>
+<%= f.date_field :start_date%>
 
 <br>
 <br>
