--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="bottom_border">
 	<div id="intro_statement">
-		<h2>Riley Parsons is a recent graduate of <a href="https://www.scu.edu/">Santa Clara University</a>.<br>He is currently working as an intern at <a href="http://www.twoxar.com/">twoXAR</a>, a data-driven drug discovery platform.</h2>
+		<h2>Riley Parsons is a recent graduate of <a href="https://www.scu.edu/">Santa Clara University</a>.<br>He is currently working as an intern at <a href="http://www.twoxar.com/">twoXAR</a>, an artificial intelligence-driven drug discovery company.</h2>
 	</div>
 </div>
 <div class="wrapper wrapper">
