HTML now permitted in markdown - needed to resize images

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
 		<hr>
 	</header>
 	<div class="content">
-		<%= markdown @post.content %>
+		<%= markdown @post.content.html_safe %>
 	</div>
 	<hr>
 
