--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Riley Parsons</title>
+	<title><%= @title ||'Riley Parsons' %></title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 	<script src="https://use.fontawesome.com/5210d1034d.js"></script>
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -9,7 +9,7 @@
 	<%= csrf_meta_tags %>
 	<%= favicon_link_tag "icon.png", rel: 'apple-touch-icon', type: 'image/png' %>
 	<%= favicon_link_tag "icon.png"%>
- 
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -40,7 +40,7 @@
 		<nav>
 			<a href="http://twitter.com/rileysparsons" target="_blank" class="no_highlight"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 			<a href="https://www.linkedin.com/in/rileysparsons" target="_blank" class="no_highlight"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-			<a href="https://github.com/rileysparsons" target="_blank" class="no_highlight"><i class="fa fa-github" aria-hidden="true"></i></a>	
+			<a href="https://github.com/rileysparsons" target="_blank" class="no_highlight"><i class="fa fa-github" aria-hidden="true"></i></a>
 		</nav>
 	</footer>
 
