--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<% @title = @post.title + " - Riley Parsons" %>
 <div id="post_show_content" class="wrapper wrapper_padding">
 	<header>
 		<p class="date"><%= @post.created_at.strftime("%A, %B, %d") %></p>
